Made all comments in all files cohesive and edited them

--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@
             </div>
 
             <div id="qualifications-content">
+
                 <!-- Figma -->
                 <article class="qualification">
                     <div class="quali-top">
@@ -152,9 +153,7 @@
                     </div>
                 </article>
 
-
-
-                <!-- Web- og grafiskdesign -->
+                <!-- Web- og graphic design -->
                 <article class="qualification">
                     <div class="quali-top">
                         <div>
@@ -178,7 +177,6 @@
                         <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
-
 
                 <!-- Creative Cloud -->
                 <article class="qualification">
@@ -214,7 +212,6 @@
                     </div>
                 </article>
 
-
                 <!-- UI/UX -->
                 <article class="qualification">
                     <div class="quali-top">
@@ -240,7 +237,6 @@
                         <img src="assets/illustrations/keyboard_arrow_up.svg" alt="Pil op ikon">
                     </div>
                 </article>
-
 
                 <!-- Copywriting -->
                 <article class="qualification">
@@ -269,7 +265,6 @@
                     </div>
                 </article>
 
-
                 <!-- HTML & CSS -->
                 <article class="qualification">
                     <div class="quali-top">
@@ -295,8 +290,6 @@
                     </div>
                 </article>
             </div>
-
-
         </section>
 
         <section class="about-flower-decoration">
@@ -316,6 +309,7 @@
             </div>
 
             <div id="about-hobbies-boxes">
+
                 <!-- Procreate -->
                 <article class="about-hobby-box">
                     <div class="hobby-box-headline">
@@ -337,7 +331,7 @@
                     </div>
                 </article>
 
-                <!-- Fotografering -->
+                <!-- Photography -->
                 <article class="about-hobby-box">
                     <div class="hobby-box-headline">
                         <h3>Fotografering</h3>
@@ -359,7 +353,7 @@
                     </div>
                 </article>
 
-                <!-- Perleplader -->
+                <!-- Bead plates -->
                 <article class="about-hobby-box">
                     <div class="hobby-box-headline">
                         <h3>Perleplader</h3>
@@ -382,7 +376,7 @@
                     </div>
                 </article>
 
-                <!-- Computerspil -->
+                <!-- Gaming -->
                 <article class="about-hobby-box">
                     <div class="hobby-box-headline">
                         <h3>Computerspil</h3>
@@ -404,8 +398,6 @@
                     </div>
                 </article>
             </div>
-
-
         </section>
 
         <!-- Call to action -->
