Changed div elements to semantic tag figure and styled it

--- a/about.html
+++ b/about.html
@@ -108,11 +108,11 @@
         </section>
 
         <section class="about-flower-decoration">
-            <div class="flowers">
+            <figure class="flowers">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
-            </div>
+            </figure>
         </section>
 
         <section id="about-qualifications">
@@ -293,11 +293,11 @@
         </section>
 
         <section class="about-flower-decoration">
-            <div class="flowers">
+            <figure class="flowers">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
-            </div>
+            </figure>
         </section>
 
         <!-- Hobbies -->
