--- a/contact.html
+++ b/contact.html
@@ -77,11 +77,11 @@
     <main>
         <section id="intro-contact">
             <h1>KONTAKT</h1>
-            <div id="flowers">
+            <figure id="flowers">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
                 <img src="assets/illustrations/small-flower.svg" alt="Illustreret grøn blomst">
-            </div>
+            </figure>
             <div id="contact-headlines">
                 <h3>Har du lyst til at starte et samarbejde med mig?</h3>
                 <h3>Jeg er i hvert fald frisk på nye udfordringer!</h3>
