--- a/index.html
+++ b/index.html
@@ -86,26 +86,26 @@
 
         <section id="introduction-path">
             <!-- For desktop -->
-            <div id="mountains-desktop">
+            <figure id="mountains-desktop">
                 <img src="assets/illustrations/circle-mountains.svg"
                     alt="Illustration af en halvcirkel i baggrunden med bjerge foran og en sø mellem bjergene">
-            </div>
+            </figure>
 
-            <div id="path-position-desktop">
+            <figure id="path-position-desktop">
                 <img id="path-desktop" src="assets/illustrations/big-path.svg"
                     alt="Illustration af en svingende sti som bevæger sig fra toppen til bunden">
-            </div>
+            </figure>
 
             <!-- For mobile -->
-            <div id="mountains">
+            <figure id="mountains">
                 <img id="left-mountains" src="assets/illustrations/left-mountains.svg" alt="Illustration af bjerge">
                 <img id="right-mountains" src="assets/illustrations/right-mountains.svg" alt="Illustration af bjerge">
-            </div>
+            </figure>
 
-            <div id="path-position">
+            <figure id="path-position">
                 <img id="path" src="assets/illustrations/path.svg"
                     alt="Illustration af en svingende sti som bevæger sig fra toppen til bunden">
-            </div>
+            </figure>
 
             <div id="front-page-content">
                 <div id="front-page-content-box">
