--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
         </section>
 
         <section id="leaves">
-            <div id="leaf-band">
+            <figure id="leaf-band">
                 <div class="leaf-cluster">
                     <img src="assets/illustrations/leaf-left.svg" alt="Illustration af et grønt blad">
                     <img src="assets/illustrations/leaf-right.svg" alt="Illustration af et grønt blad">
@@ -106,7 +106,7 @@
                     <img src="assets/illustrations/leaf-left.svg" alt="Illustration af et grønt blad">
                     <img src="assets/illustrations/leaf-right.svg" alt="Illustration af et grønt blad">
                 </div>
-            </div>
+            </figure>
 
         </section>
 
