General optimization and fixes in different files

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stine Julius // Portfolio</title>
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="index.css">
     <script src="script.js" defer></script>
 </head>
 
@@ -114,7 +114,7 @@
                             alt="Profilbillede af Stine Julius">
                     </div>
 
-                    <div class="textbox-right">
+                    <article class="textbox-right">
                         <div class="fp-textbox">
                             <h4>HVEM ER JEG?</h4>
                             <p>Mit navn er Stine, og jeg brænder for design i alle dens afskygninger.</p>
@@ -136,14 +136,14 @@
                                     projekter?</span>
                             </p>
                         </div>
-                    </div>
+                    </article>
 
                     <div class="image-side-aligned">
                         <img class="index-image" src="assets/images/profilepicture-forest-back.webp"
                             alt="Billede af Stine Julius">
                     </div>
 
-                    <div class="textbox-right">
+                    <article class="textbox-right">
                         <div class="fp-textbox">
                             <h4>HVEM ER DU?</h4>
                             <p>Arbejder du i et firma med et fast designteam, og leder du tilfældigvis efter den sidste
@@ -167,7 +167,7 @@
                                 og lær lidt mere om mine færdigheder inden for multimediedesign.
                             </p>
                         </div>
-                    </div>
+                    </article>
 
                     <div id="fp-call-to-action">
                         <h3 id="fp-headline">Er du interesseret i et godt samarbejde?</h3>
